# rust_web

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  readme.md
api/: Cargo.toml  Dockerfile  readme.md
api/src/: main.rs  routes.rs
api/templates/pages/: home.html
src/: dummy.rs  main.rs  routes.rs
static/css/: all.css
templates/: layout.html
tests/: test.rs
web-app/: Cargo.toml  Dockerfile  package.json  pnpm-lock.yaml  readme.md
web-app/src/: config.rs  main.rs  routes.rs  server.rs  template.rs
web-app/static/css/: input.css
web-app/templates/: layout.html  partial.html
web-app/templates/markdown/: test.md
web-app/templates/pages/: home.html
web-app/templates/partials/: count.html
web-app/tests/: test.rs
