[package]
name = "web"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "web"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
markdown = "0.3"
actix-http = "3.3"
tera = "1.19.0"
actix-files = "0.6"
lazy_static = "1.4"
